[bug fix] a minor layout problem

--- a/src/main/webapp/styles/app/home.css
+++ b/src/main/webapp/styles/app/home.css
@@ -119,7 +119,7 @@
 	display:inline;
 	position: absolute;
 	top: 6px;
-	right: 200px;
+	right: 212px;
 	color:cornsilk;
 	text-shadow: 1px 1px dimgray;
 }
